k8s/deployments/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana-oss:9.3.2
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 500m
              memory: 500M
          volumeMounts:
            - name: grafana-config-volume
              mountPath: /etc/grafana/provisioning/datasources
      volumes:
        - name: grafana-config-volume
          configMap:
            defaultMode: 420
            name: grafana
        # - name: grafana-storage-volume
        #   persistentVolumeClaim:
        #     claimName: grafana-vol
