k8s/deployments/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  type: ClusterIP
  ports:
    - name: grafana
      protocol: TCP
      port: 3000
      targetPort: http
